tests/error/misc_errors/state_result_not_qubit.err
Error: Unsupported (at $FILE:9:4)
  | 
7 | @guppy(module)
8 | def main(x: int) -> None:
9 |     state_result("tag", x)
  |     ^^^^^^^^^^^^^^^^^^^^^^ Non-qubit inputs to state_result are not supported

Guppy compilation failed due to 1 previous error
